--- a/nyuvm/templates/viewer.html
+++ b/nyuvm/templates/viewer.html
@@ -4,16 +4,20 @@
 	body { height: 100%; width: 100%; position: absolute; padding:0px; {% if compact %}margin-top:0px;{%endif%} } footer {display:none;} #map { width: 100%; color: grey; background-color:black; } .navbar { margin:0px; padding:0px; } /* Subnav */ .subnav { background-color: #2c2c2c; width: 100%; } .slide-title { color:#005580; font-size:125%; font-weight: bold; padding-left:5px; } .subnavlink { margin: 0; margin-top: 2px; margin-bottom: 5px; padding-right: 10px; padding-left: 10px; border-left: 1px #B3B3B3 solid; color: #919191; } .slidetitle { font-family: sans-serif; font-size: 16px; font-weight: 300; text-align: right; line-height: 22.5px; /* Fallback for web browsers that don't support RGBa */ /* RGBa with 0.6 opacity */ background-color: rgba(0, 0, 0, 0.6); /* For IE 5.5 - 7*/ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000); /* For IE 8*/ -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)"; padding: 2px; color: #F5F5F5; border: 1px solid rgba(0, 0, 0, 0.05); -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); } .slidebutton { margin-top:5px; width:115px; text-align:right; padding-right:5px; margin-right:10px; } /* Fix for Bootstrap interfering with Google Maps CSS */ img[src^="http://maps.gstatic.com/"] { max-width: none; } #map img { max-width: none; }
 </style>
 
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false{% if API_KEY %}&key={{API_KEY}}{%endif%}"></script>
+<!--<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false{% if API_KEY %}&key={{API_KEY}}{%endif%}"></script>-->
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.5.1/leaflet.js"></script>
+
+<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.5.1/leaflet.min.css" />
+<!--[if lte IE 8]><link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.5.1/leaflet.ie.min.css" /><![endif]-->
 
 {% if user.is_authenticated %}
 <script type="text/javascript" src="{{STATIC_URL}}js/bootstrap-wysihtml5/wysihtml5-0.3.0_rc2.min.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/bootstrap-wysihtml5/bootstrap-wysihtml5.js"></script>
 {% endif %}
 
-<script type="text/javascript">
+<!--<script type="text/javascript">
 	{% include "js/map_functions.js" %}
-</script>
+</script>-->
 
 {% endblock %}
 {% block layout%}none{% endblock layout%}
@@ -69,8 +73,31 @@
 {%endblock%}
 {% block slideviewer %}
 
-	<div id="map"></div>	
+	<div id="map" style="width: 800px; height: 600px"></div>
+	<script>
+ 
+		// Create map
+		var map = new L.Map('map', {
+		  center: [-20, 30], 
+		  zoom: 3
+		});
 
+		L.tileLayer('{{slide.url}}/tile_{z}_{x}_{y}.jpg', {
+			maxZoom: 9,
+			noWrap: true,
+			attribution: 'All data &copy; <a href="http://pathology.umn.edu">University of Minnesota</a>, All Rights Reserved.'
+		}).addTo(map);
+
+		function onMapMove() {
+		  var newCenter = map.getCenter();
+		  var newZoom = map.getZoom();
+		  var viewLink = window.location.protocol + window.location.host + window.location.pathname + '?x=' + newCenter.lng + '&y=' + newCenter.lat + '&zoom=' + newZoom;
+	          console.log(viewLink);
+		  $('#view_link').val(viewLink);
+		}
+		map.on('moveend', onMapMove);
+
+	</script>
 	{% if user.is_authenticated and follow %}
 		{% include container_template %}
 	{%endif%}	
