removing NYU branding; adding admin columns; making tiler scripts more verbose

--- a/nyuvm/templates/viewer.html
+++ b/nyuvm/templates/viewer.html
@@ -37,7 +37,7 @@
 		</div>
 	{% endif %}
 		<hr>
-		<p><h4><a href="#" onclick="javascript:$('#embedform').toggle();">Embed</a><br><small>Embed an NYUVM slide in another website, lab manual, and more.</small></h4>
+		<p><h4><a href="#" onclick="javascript:$('#embedform').toggle();">Embed</a><br><small>Embed a VM slide in another website, lab manual, and more.</small></h4>
 		<div class="hide" id="embedform">
 			Copy and paste the embed code below.
 			<textarea class="span5"><iframe width="640" height="400" src="{{URL_ROOT}}/v/{{collectionslide.id}}/compact/" frameborder="0"></iframe></textarea>
