--- a/nyuvm/templates/includes/base.html
+++ b/nyuvm/templates/includes/base.html
@@ -1,7 +1,7 @@
 {% load compress %}
 <!DOCTYPE html>
 <head>
-<title>NYU School of Medicine Virtual Microscope</title>
+<title>Virtual Microscope</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
@@ -59,7 +59,7 @@
 		});	
 
 		if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
-			document.title = 'NYU VM';
+			document.title = 'Virtual Microscope';
 			$("a").click(function (event) {
 				event.preventDefault();
 				window.location = $(this).attr("href");
@@ -100,7 +100,7 @@
 <div class="navbar navbar-inverse navbar-static-top">
   <div class="navbar-inner" >
 	<div class="container-fluid">
-	  <a href="{{URL_ROOT}}/" class="brand">NYU Virtual Microscope</a>
+	  <a href="{{URL_ROOT}}/" class="brand">Virtual Microscope</a>
 	  <div class="nav-collapse">
 		<ul class="nav">
 			<li class="dropdown">
@@ -153,7 +153,7 @@
 					<a href="#" class="dropdown-toggle"  data-toggle="dropdown" >Admin <b class="caret"></b>
 					</a>
 					<ul class="dropdown-menu">			
-						<li><a href="{{URL_ROOT}}/admin/" target="_blank">Django Admin Site</a></li>					
+						<li><a href="{{URL_ROOT}}/../admin/" target="_blank">Django Admin Site</a></li>					
 						<li><a href="{{URL_ROOT}}/dashboard/" > VM Dashboard</a></li>					
 						<li><a href="https://www.google.com/analytics/web/?pli=1#report/visitors-overview/a87982w27397188p63518063/" target="_blank">Google Analytics</a></li>					
 					</ul>
@@ -191,7 +191,7 @@
 	{% block content %}{% endblock content%}
 	<footer class="footer">
 		<hr>
-		Beta 2.0  An <a href="http://dei.med.nyu.edu" target="_blank">NYUSM Division of Educational Informatics</a> project.
+		v2.0  An <a href="http://dei.med.nyu.edu" target="_blank">NYUSM Division of Educational Informatics</a> project.
 	</footer>	
 	
 </div>
