--- a/nyuvm/templates/viewer.html
+++ b/nyuvm/templates/viewer.html
@@ -1,10 +1,9 @@
 {% extends "includes/base.html" %}
+{% load leaflet_tags %}
 {% block head %}
-<style>
-	body { height: 100%; width: 100%; position: absolute; padding:0px; {% if compact %}margin-top:0px;{%endif%} } footer {display:none;} #map { width: 100%; color: grey; background-color:black; } .navbar { margin:0px; padding:0px; } /* Subnav */ .subnav { background-color: #2c2c2c; width: 100%; } .slide-title { color:#005580; font-size:125%; font-weight: bold; padding-left:5px; } .subnavlink { margin: 0; margin-top: 2px; margin-bottom: 5px; padding-right: 10px; padding-left: 10px; border-left: 1px #B3B3B3 solid; color: #919191; } .slidetitle { font-family: sans-serif; font-size: 16px; font-weight: 300; text-align: right; line-height: 22.5px; /* Fallback for web browsers that don't support RGBa */ /* RGBa with 0.6 opacity */ background-color: rgba(0, 0, 0, 0.6); /* For IE 5.5 - 7*/ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000); /* For IE 8*/ -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)"; padding: 2px; color: #F5F5F5; border: 1px solid rgba(0, 0, 0, 0.05); -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); } .slidebutton { margin-top:5px; width:115px; text-align:right; padding-right:5px; margin-right:10px; } /* Fix for Bootstrap interfering with Google Maps CSS */ img[src^="http://maps.gstatic.com/"] { max-width: none; } #map img { max-width: none; }
-</style>
 
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false{% if API_KEY %}&key={{API_KEY}}{%endif%}"></script>
+{% leaflet_js %}
+{% leaflet_css %}
 
 {% if user.is_authenticated %}
 <script type="text/javascript" src="{{STATIC_URL}}js/bootstrap-wysihtml5/wysihtml5-0.3.0_rc2.min.js"></script>
@@ -67,85 +66,30 @@
 	</div>
 </div>
 {%endblock%}
+
 {% block slideviewer %}
 
-	<div id="map"></div>	
+{% leaflet_map "map" %}
 
-	{% if user.is_authenticated and follow %}
-		{% include container_template %}
-	{%endif%}	
-	{% if user.is_authenticated and transcript %}
-		{% include transcript_template %}
-	{%endif%}	
-
-	<div  id="mapbutton" class="hide" style="margin-top:10px;margin-right:10px;z-index:999;">
-		<div class="slidetitle">
-			{% if collectionslide %}{{collectionslide}}{%else%}{{slide.label}}{%endif%}
-			{% if follow %}
-			{% ifequal follow.author user %}
-				<br><span  class="label label-success" >Leading Follow: {{follow.label}} </span></a><br>
-			{% else %}
-				<br><span  class="label label-info">Following: {{follow.label}} </span></a><br>
-			{%endifequal%}
-			{% endif %}	
-		</div>
-		
-		{% if user.is_authenticated %}		
-		<a class="btn btn-mini pull-right slidebutton" href="javascript:linktoview();" ><i class="icon-signal"></i> Share / Save</a><br clear="all">
-		{% endif %}
-		
-		<a class="btn btn-mini pull-right slidebutton" href="javascript:showmetadata({{collectionslide.id}});" id="{{collectionslide.id}}" ><i class="icon-info-sign"></i> Info</a><br clear="all">
-		{% if user in collectionslide.collection.authors.all or user.is_superuser %}
-			<a class="btn btn-mini btn-primary pull-right slidebutton" href="{{URL_ROOT}}/editcollectionslide/{{collectionslide.id}}/" ><i class="icon-edit icon-white"></i> Edit</a><br clear="all">
-		{% endif %}
-
-		{% if related_slides %}
-		<div class="pull-right" id="related-menu-container"  style="clear:right;">
-			<a class="btn dropdown-toggle btn-mini slidebutton" data-toggle="dropdown" href="#">{{related_slides.count}} Related Slide{{ related_slides|pluralize }} <span class="caret"></span></a>
-			<ul class="dropdown-menu" id="related-menu">
-				{% for r in related_slides %}
-					<li><a href="{{URL_ROOT}}/v/{{r.id}}">{%ifequal r collectionslide%}*{%endifequal%}{{r}} &nbsp;<span style="font-size:85%;color:grey;">(ID: {{r.id}} {%if r.slidebox%} Box: {{r.slidebox}}{%endif%}{%if r.slidenumber%} Number: {{r.slidenumber}}{%endif%})</span></a></li>
-				{%endfor%}
-			</ul>
-		</div>	
-		<br clear="all">
-		{% endif %}
-		
-		
-		{% if user.is_authenticated %}	
-			{% if not follow %}
-			<a class="btn btn-mini pull-right slidebutton" href="javascript:togglemarkers();"><i class="icon-map-marker"></i> Toggle Markers </a><br clear="all">
-			{% endif %}
-		
-			{% if user.is_authenticated and not follow%}
-					<a class="btn btn-mini pull-right slidebutton" href="javascript:addmarker()" id="addmarkerbutton" ><i class="icon-screenshot"></i> Add a Marker</a><br clear="all">
-			{% else %}
-					{% ifequal follow.author user%}
-						<a class="btn btn-mini pull-right slidebutton" href="javascript:addmarker()" id="addmarkerbutton" ><i class="icon-screenshot"></i> Add a Marker</a><br clear="all">
-					{% endifequal %}		
-			{%endif%}				
-			<div class="pull-right" id="faculty-menu-container" style="zzclear:right;">
-				<a class="btn dropdown-toggle btn-danger btn-mini slidebutton" data-toggle="dropdown" href="#" >Faculty Markers <span class="caret"></span></a>
-				<ul class="dropdown-menu" id="faculty-menu" ></ul>
-			</div><br clear="all">
-			
-			<div class="pull-right" id="student-menu-container" style="clear:right;">
-				<a class="btn btn-inverse btn-mini slidebutton" data-toggle="dropdown" href="#" >Community Markers <span class="caret"></span></a>
-				<ul class="dropdown-menu" id="student-menu"></ul>
-			</div><br clear="all">	
-		{% endif %}
-		
-	</div>
-	{% if not compact %}
-		<!-- Mini Map -->
-		<div id="mini_map" style="width:168px;height:128px;border: solid 1px gray;display:none;"></div>
-		<div id="collapse_mini_map" style="display:none;"> <a href="#" onclick="$('#mini_map').toggle('slide'); $('#expand_mini_map').toggle('slide'); return false;"><i class="icon-remove-circle"></i></a> </div>
-	{% endif %}
-	{% if user.is_authenticated %}
-		<!-- InfoWindowEditor -->
-		<div id="markereditmodal" class="modal hide" style="width:600px;">
-			<div class="modal-body" id="markereditformdiv" style="max-height:500px;"></div>
-		</div>	
-	{% endif %}
+<script>
+        window.addEventListener("map:init", function (e) {
+          var detail = e.detail;
+          
+          slideUrl = '{{ slide.url }}/{z}/{x}_{y}.jpeg'
+          
+          slide = L.tileLayer(slideUrl, {
+            attribution: 'Images &copy; their creators; All Rights Reserved.',
+            minZoom: 10,
+            maxZoom: 16,
+            noWrap: true,
+            errorTileURL: '{{STATIC_URL}}images/blank.jpeg'
+		  });
+    
+          detail.map.addLayer(slide);
+          detail.map.setView(new L.LatLng(85.03,-179.6), 11);
+        }, false);		
+        
+    
+</script>
 
 {% endblock %}
