--- a/nyuvm/templates/includes/base.html
+++ b/nyuvm/templates/includes/base.html
@@ -1,4 +1,5 @@
 {% load compress %}
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <head>
 <title>Virtual Microscope</title>
@@ -15,11 +16,10 @@
 <link rel="shortcut icon" href="{{STATIC_URL}}images/favicon.ico"/>
 
 {% compress js %}
-<script  type="text/javascript" charset="utf-8" src="{{STATIC_URL}}js/jquery-1.8.0.min.js"></script>
+<script  type="text/javascript" charset="utf-8" src="{{STATIC_URL}}js/jquery.js"></script>
 <script  type="text/javascript" charset="utf-8" src="{{STATIC_URL}}js/jquery.form.js"></script>
-<link rel="stylesheet" href="{{STATIC_URL}}js/bootstrap-wysihtml5/bootstrap-wysihtml5.css"/>
-<script  type="text/javascript" charset="utf-8" src="{{STATIC_URL}}js/bootstrap.min.js"></script>
 <script  type="text/javascript" charset="utf-8" src="{{STATIC_URL}}js/bootbox.min.js"></script>
+{% bootstrap_javascript %}
 {% endcompress %}
 
 {% block coreheader %}{% endblock coreheader%}
@@ -76,10 +76,9 @@
 
 <!-- CSS and Fonts -->
 {% compress css %}
-<link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap.min.css" type="text/css" charset="utf-8">
-<style type="text/css">
-.navbar-inner { font-size:90%; } .navbar .nav > li > a { padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; } .metadatalink { width: 193px; position: absolute; left: 2; bottom: 1px; } .error_message{ border 1px solid green; position:absolute; top: 43px; left:0; right:0; margin-left:auto; margin-right:auto; width:33%; z-index: 999; }
-</style>
+{% bootstrap_css %}
+<link rel="stylesheet" href="{{STATIC_URL}}js/bootstrap-wysihtml5/bootstrap-wysihtml5.css"/>
+<link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap-theme.css"/>
 {% endcompress %}
 {% block head %}{% endblock head%}
 </head>
